feat: 캐릭터 상점 페이지 api 구현 (#3)